fix text alignment

--- a/src/organizations/_dashboard.scss
+++ b/src/organizations/_dashboard.scss
@@ -458,6 +458,7 @@ metamaskfeedback .metamask-icon {
   padding-bottom: .4rem;
 }
 
-metamask-feedback .metamask-text {
+metamaskfeedback .metamask-text {
   margin-left: .5rem !important;
+  display: inline-block;
 }
